PR30987: Exclude strlcpy and strlcat for glibc 2.38 and newer

The glibc library added strlcpy and strlcat.  The inlined functions in
runtime/dyninst/linux_defs.h conflicted with the glibc declarations of
those functions in /usr/include/string.h.  Now linux_defs.h only
defines those functions for older version of glibc that do not include
them.